regrese el titulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/760fb496f5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <p class="titulo">RECLIB val</p> <!--Titulo de la página-->
+    <p class="titulo">RECLIB</p> <!--Titulo de la página-->
     <hr> <!--Linea de division-->
     <table class="navegador" cellspacing="15"> <!--Menus-->
         <tr>
