--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="productos.html">PRODUCTOS</a>
             </td>
             <td>
-                <a href="contacto.php">CONTACTO</a>
+                <a href="http://localhost/contacto.php">CONTACTO</a>
             </td>
         </tr>
     </table>
