--- a/productos.html
+++ b/productos.html
@@ -14,9 +14,9 @@
             <th class="produtabl"><center><a href="calendario.html">Calendario</a></center></th>
         </tr>
         <tr>
-            <td><img src="imagenes/portada flores.png" class="masproduc"></td>
-            <td><img src="imagenes/portada paisaje.png" class="masproduc"></td>
-            <td><img src="imagenes/calendario.png" class="masproduc"></td>
+            <td><img src="imagenes/portada flores.png" class="produc"></td>
+            <td><img src="imagenes/portada paisaje.png" class="produc"></td>
+            <td><img src="imagenes/calendario.png" class="produc"></td>
         </tr>
         <tr>
             <th><center><p class="preciostabl">$90</p></center></th>
@@ -30,9 +30,9 @@
             <th class="produtabl"><center><a href="pasta gruesa.html">Pasta Gruesa</a></center></th>
         </tr>
         <tr>
-            <td><center><img src="imagenes/cuadriculada.png" class="masproduc"></center></td>
-            <td><center><img src="imagenes/flores secas.png" class="masproduc"></center></td>
-            <td><center><img src="imagenes/pasta gruesa.png" class="masproduc"></center></td>
+            <td><center><img src="imagenes/cuadriculada.png" class="produc"></center></td>
+            <td><center><img src="imagenes/flores secas.png" class="produc"></center></td>
+            <td><center><img src="imagenes/pasta gruesa.png" class="produc"></center></td>
         </tr>
         <tr>
             <th><center><p class="preciostabl">$90</p></center></th>
