--- a/productos.html
+++ b/productos.html
@@ -6,7 +6,7 @@
     <title>Más Productos</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body><center>
     <table>
         <tr>
             <th class="produtabl"><center><a href="portadaflores.html">Portada Flores</a></center></th>
@@ -40,5 +40,5 @@
             <th><center><p class="preciostabl">$130</p></center></th>
         </tr>
     </table>
-</body>
+</center></body>
 </html>
