ajustes creo que ultimos

--- a/calendario.html
+++ b/calendario.html
@@ -12,7 +12,8 @@
     </div>
     <style>
         img{float:left;
-            margin-top:50px}
+            margin-top:50px;
+            margin-left:4%;}
         
     </style>
     <div>
@@ -23,8 +24,8 @@
     </div>
     <style>
         h2{font-size:105%;
-        margin-left: 30%; margin-top: 5%;}
-        p{margin-left: 30%;}
+        margin-left: 40%; margin-top: 5%;}
+        p{margin-left: 40%;}
     </style>
     <div>
 
@@ -60,7 +61,7 @@
         height: 300px;
         margin-top: 15px;
         margin-right:600px;
-        margin-left:30%;
+        margin-left:40%;
 
     }
 </style>
