--- a/portadapaisaje.html
+++ b/portadapaisaje.html
@@ -12,7 +12,8 @@
     </div>
     <style>
         img{float:left;
-            margin-top:50px}
+            margin-top:50px;
+            margin-left:2%;}
         
     </style>
     <div>
