--- a/carrito.html
+++ b/carrito.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RECLIB</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body style="margin-top:7%;">
 <style>
