--- a/productos.html
+++ b/productos.html
@@ -41,5 +41,16 @@
             <th><center><p class="preciostabl">$130</p></center></th>
         </tr>
     </table>
+    <table>
+        <p class="plantilla">
+            <img src="imagenes/RECLIB.png" class="logoplantilla">
+            <br><br>
+            RECLIB <br>
+            Intagram: reclib_ <br>
+            Facebook: Reclib <br>
+            Email: reclib.microempresa@gmail.com <br>
+            <br><br><br>
+        </p>
+    </table>
 </center></body>
 </html>
